
public class Player {

    public static string ANIMATION_BOOL_RUN = "run";
    public static string ANIMATION_BOOL_GROUNDED = "grounded";

    public static string ANIMATION_TRIGGER_JUMP = "jump";
    public static string ANIMATION_TRIGGER_ATTACK = "attack";
    public static string ANIMATION_TRIGGER_HURT = "hurt";
    public static string ANIMATION_TRIGGER_DEAD = "dead";
}
